--- a/src/app/modules/heroes/pages/search-page/search-page.component.html
+++ b/src/app/modules/heroes/pages/search-page/search-page.component.html
@@ -6,8 +6,24 @@
         <input 
         type="text"
         matInput
-        [formControl]="searchControl">
-    </mat-form-field>
+        [formControl]="searchInput"
+        (input)= "searchHero()"
+        [matAutocomplete]="auto">
 
+        <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="onSelectedOption($event)">
+            <mat-option *ngFor="let hero of heroes " [value]="hero">
+              {{hero.superhero}}
+            </mat-option>
+            <mat-option *ngIf="heroes.length === 0 && searchInput.value && searchInput.value.length">
+                No se encontro nada con el termino {{searchInput.value}}
+            </mat-option>
+          </mat-autocomplete>
+
+    </mat-form-field>
+    
+    <!-- {{selectdHero | json}} -->
 </div>
-{{searchControl.value | json}}
+
+
+
+
